--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,807 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abel&family=Playpen+Sans:wght@100..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abel&family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Playpen+Sans:wght@100..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+:root{
+  --backgroun-color: #F5F5F5;
+  --text-color: rgb(17, 18, 18);
+  --text-color-hover:rgb(172, 173, 174);
+  --active-nav-color-bg:#ffffff;
+  --active-nav-color:#000000;
+  --icon-color: #000000;
+  --icon-hover:#484847;
+  --text-h2-color: #35373a;
+  --display-dark:none;
+  --display-light:flex;
+  --menu-color:rgba(0, 0, 0, 0.686);
+  --menu-text-color:white ;
+  --text-color-2:#908e8e;
+  --text-color-3:#444242;
+  --timeline-bg:transparent;
+  --portfolio-color-h2: #626262 ;
+  --portfolio-color-p: #565555;
+  --portfolio-bg:transparent;
+  --border-color:#313131;
+  --contact-bg:white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+[data-theme="dark"] {
+  --backgroun-color: rgb(30, 31, 31);
+  --text-color: #f6f4f4;
+  --icon-color: #f1efef;
+  --icon-hover:#7f7f7e;
+  --text-h2-color: #dcddde;
+  --display-light:none;
+  --display-dark:flex;
+  --menu-color:#f5f5f5bb;
+  --menu-text-color:black ;
+  --active-nav-color-bg: #262627;
+  --active-nav-color: white;
+  --text-color-2:#c4bfbf;
+  --text-color-3:#a3a3a6;
+  --timeline-bg:#27292b;
+
+  --portfolio-color-h2: #e9e5e5 ;
+  --portfolio-color-p: #cbc6c6;
+  --portfolio-bg:#313131;
+  --border-color:#dcdada;
+  --contact-bg:rgb(204, 201, 201) ;
 }
+
+
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: 0;
+}
+body{
+  
+  
+}
+.app{
+  background-color: var(--backgroun-color);
+ 
+}
+nav{
+  margin: 0px 0 0 0;
+  padding: 5px 0;
+  display: flex;
+  justify-content: space-around;
+  z-index: 2;
+  
+  
+}
+nav img{
+  margin: 10px 0 0  0; 
+  width: 200px;
+  height: 40px;
+  
+}
+.image-dark{
+  display: var(--display-dark);
+}
+.image-light{
+  display: var(--display-light);
+}
+
+nav ul{
+  list-style: none;
+  display: flex;
+}
+
+nav ul li{
+  
+  margin: 15px 15px;
+}
+nav ul li::after{
+  
+  border-bottom: #00658d 2px solid;
+}
+nav ul li a{
+  color: var(--text-color);
+  text-decoration: none;
+  font-size: 20px;
+  font-family: sans-serif;
+  font-weight: 530;
+  
+}
+nav ul li a:hover{
+  color: var(--text-color-hover);
+
+}
+
+
+.activenav{
+  margin: 0;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  background:var(--active-nav-color-bg);
+  color: var(--active-nav-color) ;
+}
+
+.activenav a{
+  color: var(--active-nav-color) ;
+}
+.activenav a:hover{
+  color: var(--text-color-hover);
+}
+
+
+.contact-btn .btn{
+  display: flex;
+  gap: 20px;
+  cursor: pointer;
+  
+
+  margin: 10px 0 0 0px;
+  
+}
+
+.menu{
+  display: none;
+  
+  cursor: pointer;
+  color: var(--icon-color);
+
+  margin: 5spx 0 0 0px;
+}
+
+
+.icon5{
+  color: var(--icon-color);
+  display: var(--display-dark);
+  
+}
+.icon5:hover{
+  color: var(--icon-hover);
+  
+}
+.icon6{
+  color: var(--icon-color);
+  display: var(--display-light);
+  
+}
+.icon6:hover{
+  color: var(--icon-hover);
+  
+}
+
+
+
+.contact-btn p{
+  margin: 0 0 0 5px;
+}
+
+#image{
+  width: 45px;
+}
+
+nav a{
+  font-family:  cursive;
+  
+}
+
+
+
+/*  hero section    */ 
+
+.hero{
+  display: flex;
+  justify-content: space-around;
+  
+}
+.hero .info{
+  margin: 150px 0 0 0;
+}
+.hero h2{
+  font-size: 50px;
+  margin: 0;
+  color: var(--text-h2-color);
+  font-family: "Playpen Sans", cursive;
+  
+  
+}
+.hero p{
+  font-size: 50px;
+  font-family: "Playpen Sans", cursive;
+  font-weight: 200;
+  color: var(--text-color);
+}
+.hero p span{
+  font-size: 25px;
+  border-bottom: #313336 2px solid;
+  cursor: pointer;
+  
+}
+.hero p span:hover{
+  border-bottom: #858585 2px solid;
+  color: #626364;
+}
+
+.hero .image-dark{
+  width: 585px;
+  display: var(--display-dark);
+}
+.hero .image-light{
+  width: 585px;
+  display: var(--display-light);
+}
+
+.hero .info h3{
+  background-color: var(--text-color);
+  color: var(--backgroun-color);
+  width: 150px;
+  padding: 10px ;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  border-radius: 10px;
+  cursor: pointer;
+  margin: 3px 0 0 0;
+  border: var(--text-color) 2px solid;
+}
+.hero .info h3:hover{
+  background: transparent;
+  color:var(--text-color) ;
+  border: var(--text-color) 2px solid;
+}
+.social-icons{
+  margin: 210px 0 0 0;
+  border-right: #dbdbdb 2px solid;
+  height: 170px;
+  padding-right: 10px;
+  color: #858585;
+}
+.social-icons:hover{
+  border-right: #7c7c7c 2px solid;
+}
+
+.social-icons ul li{
+  margin: 20px 0;
+}
+.social-icons ul li:hover .insta{
+  color: #9c0444;
+}
+
+.social-icons ul li:hover .linkedin{
+  color: rgb(66, 116, 166);
+}
+.social-icons ul li:hover .github{
+  color: #363737;
+}
+
+
+
+
+
+/*  about*/
+.about-content{
+  display: flex;
+  justify-content: space-around;
+  margin: 200px 0 0 0;
+  color: var(--text-color);
+}
+.about-content img{
+  width: 500px;
+}
+.about-img-dark{
+  display: var(--display-dark);
+}
+.about-img-light{
+  display: var(--display-light);
+}
+
+.about-content .about-info{
+  text-align: left;
+  width: 500px;
+  margin: 40px 0 0 0;
+}
+.about-content .about-info h1{
+  font-size: 50px;
+}
+.about-content .about-info p{
+  margin: 10px 0 0 0;
+  font-size: 22px;
+}
+.about-content .about-info h2{
+  margin: 20px 0 0 0;
+  display: flex;
+  justify-content: center;
+  font-size: 22px;
+  border: var(--text-color) 2px solid;
+  width: 190px;
+  padding: 8px 10px;
+  border-radius: 10px;
+  gap: 2px;
+  cursor: pointer;
+}
+.about-content .about-info h2:hover{
+  background-color: var(--text-color);
+  color: var(--backgroun-color);
+}
+.java{
+  color: rgb(159, 143, 0);
+}
+.react{
+  color: rgb(0, 111, 166);
+}
+.mongo{
+  color: green;
+}
+
+
+
+
+/* RESUME */
+.resume-all{
+  display: flex;
+  justify-content: center;
+}
+#timeline-card{
+  background-color: var(--timeline-bg);
+  color: var(--text-color);
+}
+
+#university{
+  color: var(--text-color-2);
+}
+#desc{
+  color: var(--text-color-3);
+}
+.resume-title{
+  text-align: center;
+  font-size: 50px;
+  color: var(--text-color);
+  margin: 100px 0;
+}
+
+
+
+
+
+
+
+
+
+
+/*  Portfolio  */
+
+.card-box{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  color: var(--text-color);
+  padding: 50px 0;
+  margin: 150px 0 0 0;
+}
+.card-box h1{
+  font-size: 50px;
+  margin: 0 0 40px 0;
+}
+.card-box h2{
+  font-size: 25px;
+  color: var(--portfolio-color-h2) ;
+  font-weight: 200;
+}
+.product-content{
+  display: flex;
+  margin: 40px 0 0 0;
+  gap: 100px;
+}
+
+.card{
+  width: 300px;
+  height: 400px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  text-align: left;
+  border-radius: 5px;
+  background: var(--portfolio-bg);
+}
+.card h3{
+  font-size: 25px;
+  padding: 5px 10px;
+}
+.card p{
+  font-size: 16px;
+  padding: 0 0 0 10px;
+  font-weight: 100;
+  color: var(--portfolio-color-p);
+}
+
+.card h4{
+  margin:  5px 0 0 10px;
+  border-bottom: var(--border-color) 2px solid;
+  font-size: 20px;
+  width: 100px;
+  display: flex;
+  gap: 5px;
+  cursor: pointer;
+}
+
+.card h4:hover{
+  color: #305766;
+  border-bottom: #212832 2px solid;
+}
+
+
+/* CONTACT */
+
+
+.contact {
+  margin: 100px 0 0 0;
+  display: flex;
+  justify-content: center;
+  
+}
+.text-md{
+  color: var(--text-color);
+}
+
+.contact--section {
+  display: flex;
+  padding: 150px 85px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 64px;
+}
+.contact--form--container {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: repeat(5, auto);
+  width: 40%;
+  row-gap: 32px;
+}
+.container {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  column-gap: 32px;
+  row-gap: 32px;
+}
+.contact--label {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10.6px;
+  flex: 1 0 0;
+  width: 100%;
+}
+span .contact--label {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10.6px;
+  flex: 1 0 0;
+  
+}
+.sub--title{
+  font-size: 50px;
+  color: var(--text-color);
+}
+.contact--input {
+  display: flex;
+  font-family: "Roboto";
+  padding: 16px;
+  align-items: center;
+  align-self: stretch;
+  border-radius: 8px;
+  border: 1.333px solid #7a7a7b;
+  background: var(--contact-bg);
+}
+
+.contact-sub{
+border: var(--text-color) 2px solid;
+color: var(--text-color);
+padding: 10px 30px;
+font-size: 18px;
+border-radius: 5px;
+cursor: pointer;
+}
+
+.contact-sub:hover{
+  background-color: var(--text-color) ;
+  color: var(--backgroun-color);
+}
+
+
+/* FOOTER */
+
+
+.footer{
+  display: flex;
+  justify-content: space-around;
+  padding: 20px 0;
+  border-top: var(--text-h2-color) 2px solid;
+  font-size: 18px;
+  color: var(--text-color);
+}
+.footer ul{
+  display: flex;
+  gap: 10px;
+}
+
+
+
+.footer ul li:hover .insta{
+  color: #9c0444;
+}
+
+.footer ul li:hover .linkedin{
+  color: rgb(66, 116, 166);
+}
+.footer ul li:hover .github{
+  color: #363737;
+}
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 1200px) {
+ 
+  .hero .image-dark{
+    margin: 20px 0 0 0;
+    width: 320px;
+    display: var(--display-dark);
+  }
+  .hero .image-light{
+    margin: 20px 0 0 0;
+    width: 320px;
+    display: var(--display-light);
+  }
+  .hero h2{
+    font-size: 35px;
+  }
+  .hero p{
+    font-size: 35px;
+  }
+  .hero .info h3{
+    width: 140px;
+  
+  }
+  .hero .info{
+    margin: 100px 0 0 0;
+    
+  }
+  .social-icons{
+    
+    margin:  150px 0 0 0;
+    
+    
+  }
+  .about{
+    display: flex;
+    justify-content: center;
+  }
+
+  .about-content{
+    display: block;
+    justify-content: center;
+    margin: 200px 0 0 0;
+    
+  }
+  .about-content img{
+    width: 300px;
+  }
+  
+  .about-content .about-info{
+    text-align: left;
+    width: 300px;
+    margin: 40px 0 0 0;
+    text-align: center;
+  }
+  .card-box{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    
+    padding: 50px 0;
+  }
+  .product-content{
+    display: block;
+    
+  }
+  .card{
+    margin: 30px 0 0 0;
+  }
+  .timeline .event::before {
+    left: 0.5px;
+    top: 20px;
+    min-width: 0;
+    font-size: 13px;
+  }
+  .timeline h3 {
+    font-size: 16px;
+  }
+  .timeline p {
+    padding-top: 20px;
+  }
+  section.lab h3.card-title {
+    padding: 5px;
+    font-size: 16px
+  }
+
+
+}
+
+
+
+@media only screen and (max-width: 480px) {
+  nav ul{
+    display: none;
+   }
+   nav img{
+    margin: 10px 0 0  0; 
+    width: 120px;
+    height: 30px;
+  }
+  .menu{
+    margin: 5px 0 0 0;
+    display: flex;
+  }
+  .contact .btn{
+    
+    margin: 10px 0 0 0px;
+    
+  }
+  .hero{
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+    gap: 20px; /* Use gap to manage spacing */
+    text-align: center;
+    
+  }
+  .hero .image-dark{
+    margin: 20px 0 0 0;
+    width: 300px;
+    display: var(--display-dark);
+  }
+  .hero .image-light{
+    margin: 20px 0 0 0;
+    width: 300px;
+    display: var(--display-light);
+  }
+  .hero .info{
+    margin: 0;
+    
+  }
+  .social-icons{
+    
+    margin:  0;
+    border-right:none ;
+    border-bottom: #dbdbdb 2px solid;
+    height: 60px;
+    
+   padding: 0;
+    color: #858585;
+    
+  }
+  .social-icons ul {
+    display: flex;
+    gap: 10px;
+  }
+  .hero h2{
+    font-size: 40px;
+  }
+  .hero p{
+    font-size: 40px;
+  }
+  .hero .info h3{
+    width: 140px;
+  
+  }
+  .double{
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+  }
+  .menu-content{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 350px;
+    height: 560px;
+    
+    background-color: var(--menu-color);
+    z-index: 999;
+    backdrop-filter: blur(10px);
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+  }
+  .menu-content ul{
+    display: block;
+  }
+  .menu-content ul li{
+    margin: 20px 0 ;
+    color: var(--menu-text-color);
+    font-size: 22px;
+  
+  }
+  .about-content .about-info p{
+    margin: 10px 0 0 0;
+    font-size: 18px;
+    text-align: justify;
+  }
+  .my-work{
+    display: flex;
+    justify-content: center;
+  }
+  .contact--section {
+    display: flex;
+    padding: 0;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    
+  }
+  .contact--section .container{
+    display: block;
+  }
+  .footer{
+    display: flex;
+    flex-direction: column-reverse;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 20px  0 50px 0;
+    border-top: #484847 2px solid;
+    font-size: 18px;
+  }
+  .timeline .event::before {
+    left: 0.5px;
+    top: 20px;
+    min-width: 0;
+    font-size: 13px;
+  }
+  .timeline .event:nth-child(1)::before,
+  .timeline .event:nth-child(3)::before,
+  .timeline .event:nth-child(5)::before {
+    top: 38px;
+  }
+  .timeline h3 {
+    font-size: 16px;
+  }
+  .timeline p {
+    padding-top: 20px;
+    
+  }
+  .timeline h4{
+    size: 16px;
+    color: rgb(80, 80, 81);margin: 12px 0 0 0;
+  }
+
+  
+}
+
+
+
+
+
+
+
+
+
+
